Fix issues with dark mode shadow color

--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -16,7 +16,7 @@ body {
     --accent-color: #a3d5d6;
     --link-color: #42b8b8;
     --border-color: #2c8d8d;
-    --shadow-color: #111;
+    --shadow-color: #1a1a1a;
     --pure-background: #ffffff08;
     --field-background: #fff1;
   }
